--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.0.0-beta.55",
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
