--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.118",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "css-vars": "^2.2.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "rxjs": "~6.2.0",
